# dnstt-manager

./: .gitignore  README.md  download_fonts.py  main.py  pyproject.toml
app/: config.py  database.py
app/api/: app.py  auth.py
app/api/routes/: balancer.py  configurations.py  resolvers.py  system.py  ws.py
app/core/: data_balancer.py  dns_balancer.py  haproxy_manager.py  health_checker.py  process_manager.py  resolver_manager.py  socks_layer.py  system_monitor.py
app/models/: __init__.py  balancer.py  base.py  configuration.py  metrics.py  resolver.py  setting.py
app/schemas/: balancer.py  configuration.py  resolver.py  system.py
data/: dnstt_manager.db
static/: index.html
static/css/: fonts.css  style.css
static/js/: app.js
static/js/components/: charts.js  ui.js
static/js/pages/: balancer.js  configurations.js  dashboard.js  haproxy.js  resolvers.js  settings.js
