[project]
name = "dnstt-manager"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "click>=8.3.1",
    "dnslib>=0.9.26",
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "psutil>=7.2.2",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn[standard]>=0.41.0",
]
